feat: typeによるスタイルの出し分け実装

--- a/src/components/WantButton/index.module.scss
+++ b/src/components/WantButton/index.module.scss
@@ -1,6 +1,7 @@
 @use '../../styles//mixin' as mixin;
 
 .root {
+  min-width: 110px;
   padding: 5px 20px;
   font-weight: bold;
   background-color: mixin.$ternaryColor;
@@ -14,5 +15,10 @@
 
   &:focus {
     background-color: mixin.$bgColor;
+  }
+
+  &.round {
+    min-height: 110px;
+    border-radius: 50%;
   }
 }
