style: 変数disabledColorの追加

--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -5,6 +5,7 @@ $primaryColor: #33f;
 $secondaryColor: #f93;
 $ternaryColor: #3f3;
 $whiteColor: #f5f5dc;
+$disabledColor: #949499;
 
 /* https://www.colordic.org/colorscheme/1009 */
 
