--- a/src/components/BookList/index.module.scss
+++ b/src/components/BookList/index.module.scss
@@ -2,8 +2,8 @@
 
 .root {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  row-gap: 3rem;
-  column-gap: 2rem;
+  grid-template-columns: repeat(3, minmax(300px, 1fr));
+  row-gap: 20px;
+  column-gap: 25px;
   margin-top: 20px;
 }
