--- a/src/components/CommentButton/index.module.scss
+++ b/src/components/CommentButton/index.module.scss
@@ -40,3 +40,24 @@
   background-image: url('/icon/edit.svg');
   border-radius: 5px;
 }
+
+.cancel {
+  padding: 5px 10px;
+  font-size: mixin.rem(18);
+  font-weight: bold;
+  color: mixin.$whiteColor;
+  background-color: mixin.$disabledColor;
+  border: 3px solid mixin.$disabledColor;
+  border-radius: 5px;
+  outline: none;
+
+  &:hover,
+  &:focus {
+    color: mixin.$mainTextColor;
+    background-color: mixin.$bgColor;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+  }
+}
