style: レスポンシブ対応

--- a/src/components/molecules/BookDataList/index.module.scss
+++ b/src/components/molecules/BookDataList/index.module.scss
@@ -19,4 +19,12 @@
   > dd {
     flex: 1;
   }
+
+  @include mixin.mq() {
+    flex-direction: column;
+
+    > dt {
+      width: 100%;
+    }
+  }
 }
