--- a/src/components/molecules/CommentForm/index.module.scss
+++ b/src/components/molecules/CommentForm/index.module.scss
@@ -7,6 +7,10 @@
   width: 100%;
   padding: 30px 30px;
   background-color: mixin.$headerBgColor;
+
+  @include mixin.mq() {
+    padding: 15px 15px;
+  }
 }
 
 .form {
@@ -21,6 +25,10 @@
   font-size: mixin.rem(18);
   resize: none;
   border-radius: 5px;
+
+  @include mixin.mq() {
+    height: 70px;
+  }
 }
 
 .action {
