--- a/src/components/molecules/InternalBookSearch/index.module.scss
+++ b/src/components/molecules/InternalBookSearch/index.module.scss
@@ -22,6 +22,7 @@
     margin-left: 5px;
     content: "";
     background-image: url("/icon/search.svg");
+    background-repeat: no-repeat;
   }
 }
 
