--- a/src/components/molecules/BookDataList/index.module.scss
+++ b/src/components/molecules/BookDataList/index.module.scss
@@ -6,12 +6,15 @@
 
 .item {
   display: flex;
+  align-items: flex-start;
 
   &:not(:first-child) {
     margin-top: 10px;
   }
 
   > dt {
+    display: flex;
+    align-items: center;
     width: clamp(120px, 15%, 150px);
     font-weight: bold;
   }
