feat: コメント登録後にfocus当たるように処理追加

--- a/src/components/molecules/CommentItem/index.module.scss
+++ b/src/components/molecules/CommentItem/index.module.scss
@@ -1,6 +1,8 @@
 @use '../../../styles/mixin' as mixin;
 
 .item {
+  outline: none;
+
   &:not(:first-child) {
     padding-top: 20px;
     margin-top: 20px;
