--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -4,7 +4,9 @@ $headerBgColor: #ff3;
 $primaryColor: #33f;
 $secondaryColor: #f93;
 $ternaryColor: #3f3;
+$quaternaryColor: #ff99eb;
 $whiteColor: #f5f5dc;
+$reactedColor: #cdcdcd;
 $disabledColor: #949499;
 
 /* https://www.colordic.org/colorscheme/1009 */
