--- a/src/components/molecules/SortSelectBox/index.module.scss
+++ b/src/components/molecules/SortSelectBox/index.module.scss
@@ -1,7 +1,34 @@
 @use '../../../styles/mixin' as mixin;
 
 .root {
+  position: relative;
   display: flex;
   justify-content: flex-end;
   margin-top: 20px;
+  overflow: hidden;
+
+  &::after {
+    position: absolute;
+    top: 25%;
+    right: 10px;
+    width: 10px;
+    height: 10px;
+    pointer-events: none;
+    content: '';
+    border-bottom: 3px solid mixin.$mainTextColor;
+    border-left: 3px solid mixin.$mainTextColor;
+    transform: rotate(-45deg);
+  }
+}
+
+.select {
+  padding: 0 40px 0 5px;
+  font-size: mixin.rem(16);
+  line-height: 1.5;
+  cursor: pointer;
+  background-color: mixin.$whiteColor;
+  border: 1px solid mixin.$mainTextColor;
+  border-radius: 3px;
+  box-shadow: none;
+  appearance: none;
 }
